--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "electron-vite-react",
   "version": "2.1.0",
   "main": "dist-electron/main/index.js",
-  "description": "Electron Vite React boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "description": "images",
+  "author": "zhangzebin <1185261506@qq.com>",
   "license": "MIT",
   "private": true,
   "debug": {
